# multiplatform-calendar

./: .gitignore  Package.swift  README.md  build.gradle.kts  buildRelease  buildRust  buildXCFramework  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml  auto-author-assign.yml  dependent-issues.yml  multiplatform.yml  publish-ios-snapshot.yml  publish-release-on-merged.yml  publish-to-maven-central-snapshots.yml  publish-to-maven-central.yml  release-core.yml
CalendarCore/: build.gradle.kts
CalendarKmpDav/: build.gradle.kts
Core/: build.gradle.kts
build-logic/: build.gradle.kts  settings.gradle.kts
build-logic/plugins/: README.md  build.gradle.kts
composeApp/: build.gradle.kts
gradle/: kmpCalendar.versions.toml
gradle/wrapper/: gradle-wrapper.properties
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
kmpdav/: Cargo.toml  build.gradle.kts
kmpdav/rust/caldav_bridge/: Cargo.toml
kmpdav/rust/caldav_bridge/src/: calendars.rs  client.rs  events.rs  lib.rs  models.rs  props.rs
kmpdav/src/commonMain/kotlin/com/infomaniak/multiplatform_calendar/data/remote/caldav/: CaldavBridgeException.kt  CalendarSyncRemoteSource.kt  RustCaldavBridge.kt
kmpdav/src/commonMain/kotlin/com/infomaniak/multiplatform_calendar/data/remote/caldav/di/: CaldavClientModule.kt
kmpdav/src/commonMain/kotlin/com/infomaniak/multiplatform_calendar/data/remote/caldav/model/: DavAccount.kt  RemoteDavCalendar.kt  RemoteDavEvent.kt  RemoteDavEventRef.kt  RemoteEventEdit.kt
kmpdav/src/commonMain/kotlin/com/infomaniak/multiplatform_calendar/kmpdav/: KmpDavClient.kt
kmpdav/src/commonMain/kotlin/com/infomaniak/multiplatform_calendar/kmpdav/models/: AddressBookCollection.kt  CalendarCollection.kt  CalendarObject.kt  ContactObject.kt  DavAccount.kt
kmpdav/src/commonMain/rust/: raw_dav.rs  xml.rs
rust/caldav_bridge/: Cargo.toml  README.md
rust/caldav_bridge/src/: lib.rs
shared/: build.gradle.kts
(+383 files in other folders)
