[package]
name = "kmpdav"
version = "0.1.0"
edition = "2024"

[lib]
name = "kmpdav"
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"

[dependencies]
base64 = "0.22"
bytes = "1"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-rustls = { version = "0.27", features = ["native-tokio", "http1", "tls12"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
libdav = "0.10.5"
roxmltree = "0.21"
thiserror = "2"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["auth"] }
uniffi = { version = "0.29.4", features = ["tokio"] }
url = "2.5"
