[package]
name = "caldav_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libdav = "0.5"
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "webpki-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
http = "1"
uniffi = "0.29"
thiserror = "2"
icalendar = { version = "0.17.10", features = ["parser"] }

[profile.release]
lto = true
opt-level = "s"
strip = true
